# taxonomy-tool-classifier

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: taxonomy.json
scripts/: build_taxonomy.py  download_data.py  run_classification.py
src/ai_taxonomy/: config.py
src/ai_taxonomy/data/: loader.py  preprocessor.py
src/ai_taxonomy/evaluation/: metrics.py  visualization.py
src/ai_taxonomy/models/: base.py  claude.py  gemini_model.py  mistral_model.py  openai_model.py
src/ai_taxonomy/pipeline/: classify.py  golden_set.py
src/ai_taxonomy/taxonomy/: schema.py  validator.py
