[project]
name = "ai-tool-taxonomy"
version = "0.1.0"
description = "LLM-powered pipeline that classifies AI tools into a multi-level hierarchical taxonomy with inter-model consistency evaluation."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "google-generativeai>=0.8.0",
    "mistralai>=0.4.0",
    "datasets>=2.19.0",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tenacity>=8.3.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_taxonomy"]
